# dmc_node

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  _command_dispatcher_8cpp.html  _command_dispatcher_8cpp_source.html  _command_dispatcher_8h.html  _command_dispatcher_8h_source.html  _dmc_node_8cpp.html  _dmc_node_8cpp_source.html  _dmc_node_8h.html  _dmc_node_8h.js  _dmc_node_8h_source.html  _http_translator_8cpp.html  _http_translator_8cpp_source.html  _http_translator_8h.html  _http_translator_8h_source.html  _local_server_8cpp.html  _local_server_8cpp_source.html  _local_server_8h.html  _local_server_8h_source.html  _request_8h.html  _request_8h_source.html  _request_dispatcher_8cpp.html  _request_dispatcher_8cpp_source.html  _request_dispatcher_8h.html  _request_dispatcher_8h_source.html  _request_processor_8h.html  _request_processor_8h_source.html  _response_8cpp.html  _response_8cpp_source.html  _response_8h.html  _response_8h_source.html  annotated.html  annotated.js  classdmc_1_1_command_dispatcher-members.html  classdmc_1_1_command_dispatcher.html  classdmc_1_1_command_dispatcher.js  classdmc_1_1_dmc_node-members.html  (+53 more)
lib/poco/: CMakeLists.txt
lib/poco/cmake/: PocoMacros.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_c.js  searchdata.js
src/: CMakeLists.txt
src/code/: DmcNode.cpp  DmcNode.h  dmcServer.cpp  main.cpp
src/code/backEnd/: Device.h  DeviceCreator.h  DeviceFactory.cpp  DeviceFactory.h  DeviceManager.cpp  DeviceManager.h  RequestProcessor.h  dmcServer.cpp  dmcServer.h
src/code/backEnd/core/comm/json/rpc/: jsonRpc.cpp
src/code/backEnd/core/comm/upnp/: upnp.cpp
src/code/backEnd/device/hue/: hueLight.cpp
src/code/backEnd/deviceDrivers/: HueDriver.cpp  HueDriver.h  UpnpDriver.cpp  UpnpDriver.h
src/code/backEnd/deviceDrivers/upnp/: SddpParser.cpp  SddpParser.h  UpnpDevice.h  UpnpParser.cpp  UpnpParser.h
src/code/backEnd/devices/: HueDevice.cpp  HueDevice.h
src/code/backEnd/provider/: deviceFactory.h  persistence.cpp
src/code/backEnd/requestProcessors/: CommandDispatcher.cpp  CommandDispatcher.h
src/code/backEnd/service/user/: user.cpp
src/code/backEnd/service/user/device/kodi/: kodi.cpp
src/code/core/comm/http/: httpRequest.cpp  httpRequest.h  httpResponse.cpp  httpResponse.h
src/code/core/comm/json/: JsonServer.h
src/code/core/comm/json/rpc/: jsonRpc.h
src/code/device/hue/: hueBridge.cpp  hueBridge.h  hueLight.cpp  hueLight.h
src/code/frontEnd/: HttpTranslator.cpp  HttpTranslator.h  LocalServer.cpp  LocalServer.h  Request.h  RequestDispatcher.cpp  RequestDispatcher.h  Response.cpp  Response.h
src/code/home/: device.h
src/code/home/device/: actuator.h
src/code/provider/: deviceFactory.cpp  deviceMgr.cpp  deviceMgr.h  idGenerator.cpp  persistence.h
src/code/service/public/: hubInfo.h
src/code/service/user/: user.cpp  user.h
src/code/service/user/device/: scene.cpp  scene.h
src/code/service/user/device/kodi/: kodi.cpp  kodi.h
test/: CMakeLists.txt
test/integrationTest/: CMakeLists.txt
test/integrationTest/frontend/: CMakeLists.txt  test.cpp
test/unitTest/: CMakeLists.txt
test/unitTest/backEnd/: CMakeLists.txt
test/unitTest/backEnd/deviceDrivers/hueDriver/: CMakeLists.txt  test.cpp
test/unitTest/backEnd/deviceDrivers/upnpDriver/: CMakeLists.txt  test.cpp
test/unitTest/backEnd/deviceFactory/: CMakeLists.txt  test.cpp
test/unitTest/backEnd/deviceManager/: CMakeLists.txt  test.cpp
test/unitTest/backEnd/hueDevice/: CMakeLists.txt  test.cpp
test/unitTest/backEnd/requestProcessors/: CMakeLists.txt  test.cpp
test/unitTest/backEnd/requestProcessors/commandDispatcher/: CMakeLists.txt  test.cpp
test/unitTest/frontEnd/: CMakeLists.txt
test/unitTest/frontEnd/httpTranslator/: CMakeLists.txt  test.cpp
test/unitTest/frontEnd/localServer/: CMakeLists.txt  test.cpp
test/unitTest/frontEnd/requestDispatcher/: CMakeLists.txt  main.cpp  test.cpp
tools/: CMakeLists.txt
tools/hueAttack/: CMakeLists.txt  config.json  main.cpp
tools/mockHueAttackBlock/: CMakeLists.txt  main.cpp
tools/mockHueBridge/: CMakeLists.txt
tools/mockHueBridge/src/: ErrorMessage.cpp  ErrorMessage.h  MockHueBridge.cpp  MockHueBridge.h  main.cpp
tools/upnpTestingTool/: CMakeLists.txt
tools/upnpTestingTool/src/: main.cpp
